--- a/PI-Pokemon-main/client/src/components/Form/Form.css
+++ b/PI-Pokemon-main/client/src/components/Form/Form.css
@@ -1,64 +1,102 @@
-  .input-item {
-    color: #000;
-    padding: 10px 20px;
-  }
-  .form-container{
-    background-color: #fff;
-    display: inline-block; 
-   
-  }
-  .div-container{
-    display: flex;
-    flex-direction: column;
-  }
-  .crearBtn {
-    margin: 10px;
-    padding: 12px 38px;
-    display: inline-block;
-    border: none;
-    background-color: #9b0000;
-    color: #fff;
-   border-radius: 2px;
-  }
-  .crearBtn:hover {
-    background-color: #d50000;
-  }
-  .bodyForm{
-    background-image: url("http://www.solofondos.com/wp-content/uploads/2016/01/fondos-de-pantalla-de-pokemon-hd-para-pc.jpg");
-    background-size:cover ;
-     background-repeat: no-repeat;
-     background-attachment: fixed;
-     width: 100%;
-     height: 100%;
+.bodyForm {
+  background-image: url("https://images.alphacoders.com/235/235203.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  width: 100%;
+  height: 120%;
+  position: absolute;
 }
-.NavLinkContainer{
-  display: flex;
-  justify-content:left
+
+.form {
+  position:relative;
+  top:-30px;
+  padding-top: 20px;
+  font-family: "Rubik", sans-serif;
+  font-weight: 200;
+  font-size: 15px;
+  display: inline-block;
+  border-radius: 7px;
+  background-color: #f8f7f7;
+  padding: 20px 40px 20px 40px ;
 }
-.NavLinkForm{
-  margin: 10px;
-  margin-bottom: -20px;
-  padding: 6px;
-    display: inline-block;
-    border: none;
-    background-color: #9b0000;
-    color: #fff;
-    text-decoration: none;
+
+.input-item {
+  margin-top: 5px;
+  padding-left: 15px;
+  height: 30px;
+  width: 200px;
+  border-radius: 7px;
+  border: none;
+  background-color: #ebe6e6;
+}
+
+.inputs:focus {
+  outline: none;
+}
+
+.select {
+  margin-top: 5px;
+  padding-left: 15px;
+  height: 30px;
+  width: 200px;
+  border-radius: 20px;
+  border: none;
+  background-color: #f8f7f7;
+  font-family: "Rubik", sans-serif;
+}
+
+.select:focus {
+  outline: none;
+}
+
+.deleteButton {
+  border-radius: 20px;
+  border: none;
+  padding: 3px;
+  background-color: red;
+  color: #fff;
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 12px;
+}
+
+.submit {
+  height: 30px;
+  width: 100px;
+  border-radius: 8px;
+  background-color: #1c3651;
+  color: #fff;
+  font-family: "Rubik", sans-serif;
+  cursor: pointer;
+  border: none;
+  margin-top: 5px;
+}
+.submit:hover{
+  background-color: #001028;
+}
+.Errors {
+  font-family: "Rubik", sans-serif;
+  font-size: 11px;
+  font-weight: 400;
+  margin-top: 5px;
+  color: red;
+}
+.NavLinkContainer {
+display: flex;
+justify-content: left;
+}
+.NavLinkForm {
+  cursor: pointer;
+  font-size: 12px;
+  padding: 5px 9px;
+  border-radius: 8px;
+  font-weight: 500;
+  text-decoration: none;
+  display: inline-block;
+  background-color: #1c3651;
+  color: #fff;
 }
 .NavLinkForm:hover{
-  background-color: #d50000;
-}
-
-
-.Errors{
-  color: red;
-  font-size: 10.5px;
-  margin: 10px;
-  display: flex;
-justify-content: center;
-}
-
-label{
-  display: block;
-
+  background-color: #001028;
 }
