--- a/PI-Pokemon-main/client/src/components/Error/Error.css
+++ b/PI-Pokemon-main/client/src/components/Error/Error.css
@@ -1,16 +1,21 @@
 .errorBackground{
-    background-color: #222;
-    color: #fff;
+    background-image: url("https://i.blogs.es/02534d/rubizafiro/1366_2000.jpeg");
+
     padding: 70px;
     width: 100%;
     height: 100%;
     position:absolute;
 }
+.imgError{
+
+border-radius: 40px;
+}
 .h1Error{
     padding:10px ;
 }
 .pError{
-    font-size: 22px;
+    font-size: 23px;
+    font-weight: 600;
 }
 .buttonError{
     background: #001028;
@@ -25,4 +30,5 @@
   }
   .buttonError:hover{
     background-color: #1c3651;
+    cursor: pointer;
   }
