--- a/PI-Pokemon-main/client/src/components/Detail/Detail.css
+++ b/PI-Pokemon-main/client/src/components/Detail/Detail.css
@@ -21,7 +21,7 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
   width: 100%;
-  height: 100%;
+  height: 110%;
   position: absolute;
 }
 .p-item {
@@ -65,4 +65,28 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.buttonDelete{
+  margin: 10px;
+  padding: 10px 12px;
+  display: inline-block;
+  border: none;
+  background-color: #1c3651;
+  color: #fff;
+  border-radius: 2px;
+}
+.buttonDelete:hover{
+  background-color: #001028;
+}
+.buttonEdit{
+  padding: 9.5px;
+  font-size: 15px;
+  border: none;
+  background-color: #1c3651;
+  color: #fff;
+  border-radius: 2px;
+  text-decoration: none;
+}
+.buttonEdit:hover{
+  background-color: #001028;
 }
