Actualizando detalles del proyecto

--- a/PI-Pokemon-main/client/src/components/Error/Error.module.css
+++ b/PI-Pokemon-main/client/src/components/Error/Error.module.css
@@ -10,10 +10,10 @@
 
 border-radius: 40px;
 }
-.h1Error{
+.titleError{
     padding:10px ;
 }
-.pError{
+.textError{
     font-size: 23px;
     font-weight: 600;
 }
