--- a/PI-Pokemon-main/client/src/components/SearchBar/SearchBar.module.css
+++ b/PI-Pokemon-main/client/src/components/SearchBar/SearchBar.module.css
@@ -5,14 +5,14 @@
 }
 .navContainer {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   padding: 20px;
   background-color: rgba(0, 0, 0, 0.6);
   display: flex;
 }
 .inputSearchBar {
   margin: 10px;
-
+margin-left: -35px;
   margin-right: 0;
   padding: 1.2em 10em;
   outline: none;
@@ -42,7 +42,6 @@
 }
 .btnForm {
   position: relative;
-  right: 40px;
   background: #1c3651;
   color: #fff;
   display: inline-block;
@@ -91,8 +90,7 @@
 .refresh {
   background: #1c3651;
   position: relative;
-  left: 70px;
-  color: #fff;
+    color: #fff;
   display: inline-block;
   padding: 11px 15px;
   text-decoration: none;
@@ -111,7 +109,6 @@
   color: #fff;
   display: inline-block;
   margin: 10px;
-
   border: none;
 }
 .selectTypes {
