--- a/PI-Pokemon-main/client/src/components/Home/Home.module.css
+++ b/PI-Pokemon-main/client/src/components/Home/Home.module.css
@@ -15,6 +15,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  
   width: 100%;
   height: 100%;
   position: absolute;
@@ -24,7 +25,12 @@
   justify-content: center;
   align-items: center;
 }
-
+.container{
+  margin: 70px;
+}
+.title{
+  font-size: 45px;
+}
 .NavLinkToLanding {
   background: #1c3651;
   color: #fff;
