--- a/PI-Pokemon-main/client/src/components/Paginado/Paginado.module.css
+++ b/PI-Pokemon-main/client/src/components/Paginado/Paginado.module.css
@@ -1,13 +1,14 @@
 .paginadoLi{
     display: inline-block;
     margin: 6px;
+
     }
 .buttonPaginado{
     padding: 7px;
     background:#1c3651;
     color:#fff;
     border: none;
-    margin-bottom: 23px;
+    margin-bottom: 23px;    border-radius: 5px;
 }
 .buttonPaginado:focus{
     background:#1c3651;
